k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: aks-helloworld
  namespace: helloworld
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 8080
  selector:
    app: aks-helloworld
