k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: aks-helloworld
  namespace: helloworld
spec:
  ingressClassName: webapprouting.kubernetes.azure.com
  rules:
    - host: example.com
      http:
        paths:
          - backend:
              service:
                name: aks-helloworld
                port:
                  number: 80
            path: /
            pathType: Prefix
